tests/NormalTests/paczka1/small_fuzzy/70358497.err
Error in line 1: 1G4T5gtF7 A472 24,7
Error in line 10: kBZAo723XCa A960 17,1
Error in line 14: dOK5PXYnhf A472 443,07
